--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^0.1.2
+  lottie:
   spreadsheet_decoder: # parsing xlsx files
   path_provider: # reading/writing files in application document directory
   file_picker: # using local files from device
@@ -19,12 +20,15 @@ dependencies:
   provider: # state-management
   printing: # using image assets in pdf generation
   open_file: ^3.0.1
-  flutter_local_notifications: ^2.0.0+1
+  alan_voice: 
+  firebase_storage: 
+  flutter_local_notifications: 
   screenshot: ^0.2.0
   firebase_core:
-  firebase_auth: ^0.14.0+5
+  firebase_auth: 
   firebase_dynamic_links: ^0.5.1
-  firebase_storage: ^3.0.3
+  wiredash: ^0.2.0
+  
   qr_flutter:
 
 
